Subsanación de advertencias antes de cerrar los fuentes para entrega BootLoader 2.0 / AFirma 3.2
git-svn-id: http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/trunk/project@12 dcdbb401-323c-49cf-88a0-803402807c85